--- a/original_html/coursehome.html
+++ b/original_html/coursehome.html
@@ -1,7 +1,7 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+﻿<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html lang="ja">
 <head>
-<meta http-equiv="Content-Type" content="text/html;charset=EUC-JP" />
+<meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
 <LINK REL="stylesheet" TYPE="text/css" HREF="09coursehome.css" />
 <title>
 名大の授業 (NU OCW)
